--- a/src/pages/info/loadmap/loadmap.module.css
+++ b/src/pages/info/loadmap/loadmap.module.css
@@ -1,34 +1,23 @@
+.section{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 .container{
 	display: flex;
 	flex-direction: column;
-}
-.track{
-/*	border: #eee solid 1px;*/
-	
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	list-style: none;
-}
-.track > * {
-	margin-right : 2.5rem;
-	color : #777;
-	font-weight: bold;
-}
-.track > *:hover{
-	color: blue;
-}
-
-.track_title{
-	width: 5rem;
-	border:  #ddd solid 1px;
-	padding: 0.5rem;
+	max-width: 800px;
+	width : 80%;
+	height: 80%;
 	border-radius: 0.5rem;
-
-	font-weight: bold;
-	color: black;
-	text-align: center;
+	overflow-x: scroll;
+	box-shadow: 0px 0px 20px rgba(0,0,0, 0.3);
+	background-color: rgba(0, 0, 0, 0.3);
+}
+.content {
+	width: max-content;
+	min-width: 100%;
+	min-height: 400px;
 
 }
-
-
