--- a/src/pages/info/loadmap/loadmap.module.css
+++ b/src/pages/info/loadmap/loadmap.module.css
@@ -2,15 +2,20 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	
+	position: relative;
 }
 
 .container{
 	display: flex;
 	flex-direction: column;
+
 	max-width: 800px;
 	width : 80%;
 	height: 80%;
 	border-radius: 0.5rem;
+
+
 	overflow-x: scroll;
 	box-shadow: 0px 0px 20px rgba(0,0,0, 0.3);
 	background-color: rgba(0, 0, 0, 0.3);
