--- a/src/pages/info/experience/project/detailedProject.module.css
+++ b/src/pages/info/experience/project/detailedProject.module.css
@@ -10,6 +10,15 @@
 	opacity: 0;
 }
 
+.content{
+	padding: 1.5rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 100%;
+	flex-grow: 1;	
+}
+
 .container:hover > img:first-child{
 	width: 2rem;
 	height: 2rem;
@@ -17,30 +26,28 @@
 	transition: ease-in 0.5s;
 	transition-property: opacity;
 }
-.container:hover > img:first-child:hover {
+.container:hover > img:first-child:hover{
 	width: 2.5rem;
 	height: 2.5rem;
 	opacity: 1;
 	transition: ease-in 0.3s;
 }
 
+
 .img{
-	height: 50%;
+	height: 100%;
 	object-fit: cover;
-	transform: translateY(-25%);
 	flex-grow: 1;
 }
 
 .title{
 	font-weight: bold;
-	transform: translateY(-50%);
 	flex-grow: 1.5;
 }
 
 .description {
 	max-height: 2rem;
 	font-size : 0.8rem;
-	transform: translateY(-30%);
 	text-overflow: ellipsis;
 	overflow: hidden;
 	flex-grow: 0.5;
@@ -48,7 +55,6 @@
 .tags {
 	display: flex;
 	justify-content: center;
-	transform: translateY(-50%);
 	flex-grow: 1;
 }
 .tags > * {
@@ -56,7 +62,6 @@
 }
 
 .term {
-	transform: translateY(-50%);
 	color : #888;
 	font-weight: bold;
 	font-size: 0.6rem;
