--- a/src/pages/info/experience/projects.module.css
+++ b/src/pages/info/experience/projects.module.css
@@ -11,23 +11,57 @@
 	flex-direction: column;
 	justify-content: space-between;
 
+	position: relative;
 	
-/*	border: #eee solid 1px;*/
 	border-radius:  3em;
 	overflow: hidden;
-
 
 	box-shadow: 00px 0px 20px rgba(0,0,0, 0.3);
 
 }
+
+.project_container:hover{
+	position: relative;
+	height: 30vw;
+	width: 30vw;
+	min-height: 300px;
+	min-width: 300px;
+
+	transition: ease-in 0.2s;
+}
+
+.project_container_clicked {
+	position: absolute;
+	top:50%;
+	left:50%;
+	
+	height: 25vw;
+	width : 60vw;
+	min-height: 300px;
+	min-width: 300px;
+
+	display: flex;
+
+	z-index: 3;
+	transform: translate(-50%, -50%);
+	transition: ease-in 0.5s;
+	box-shadow: 00px 0px 20px rgba(0,0,0, 0.3);
+	border-radius: 3rem;
+	overflow: hidden;
+	background-color: white;
+}
+
 .projects_container{
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+
+	position: relative;
+
 	text-align: center;
 	width: 80vw;
 	height: 30vw;
-	min-height: 250px;
+	min-height: 350px;
 
 	overflow-x: scroll;
 }
