--- a/src/pages/info/loadmap/trackDetailView.module.css
+++ b/src/pages/info/loadmap/trackDetailView.module.css
@@ -36,3 +36,10 @@
 	color: white;
 	font-weight: bold;
 }
+
+.content {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
