--- a/src/pages/info/loadmap/notion/notionContainer.module.css
+++ b/src/pages/info/loadmap/notion/notionContainer.module.css
@@ -1,8 +1,29 @@
 .container{
+	position: relative;
 	padding: 2rem;
 	margin: 0;
+	height: 100%;
+	box-sizing: border-box;
 }
 
 .content {
 	width: 100%;
+	height: 100%;
+}
+
+.subcontent {
+	position: absolute;
+	top:0;
+	right: 0;
+	height: 100%;
+	width: 50%;
+
+	border-radius: 0.5rem;
+
+	backdrop-filter: blur(10px);
+
+	background-color: rgba(250, 250, 250, 0.7);
+	box-shadow: 0px 0px 20px rgba(0,0,0, 0.3);
+	z-index: 2;
+
 }
