--- a/src/pages/info/loadmap/trackDetailView.module.css
+++ b/src/pages/info/loadmap/trackDetailView.module.css
@@ -4,8 +4,11 @@
 	left: 50%;
 
 	width: 80%;
+	height: 50vh;
 	min-width: 500px;
 	min-height: 500px;
+
+	overflow-y : hidden;
 
 	border-radius: 0.5rem;
 
