feat : add table ratio property

--- a/src/notion/component/component.module.css
+++ b/src/notion/component/component.module.css
@@ -3,7 +3,8 @@
 }
 
 
-.typesTitle, .typesMultipleSelect, .typesRollup, .typesCheckbox, .typesFormula, .typesSelect {
+.typesTitle, .typesMultipleSelect, .typesRollup, .typesCheckbox, 
+.typesFormula, .typesSelect,.typesDate {
 
 	height: 1.25em;
 
