--- a/src/pages/components/skills/index.module.css
+++ b/src/pages/components/skills/index.module.css
@@ -2,6 +2,16 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	position: relative;
+}
+
+.container{
+	width: 50%;
+	display: flex;
+	flex-direction: row;
+	align-items: flex-end;
+	justify-content: center;
+	position: relative;
 }
 
 
@@ -9,7 +19,21 @@
 	list-style: none;
 	display: flex;
 	flex-direction: column;
-	width : 50%;
+	width : 100%;
 	min-width: 200px;
+}
+
+.legend {
+	position: absolute;	
+	right: 0;
+	bottom: 0;
+	
+	margin: 1.5rem 0 ;
+	padding-left : 1rem;
+	transform: translateX(105%);
+
+	font-size: 0.8rem;
+	color: #aaa;
+	
 }
 
