--- a/src/pages/components/skills/subStackItem.module.css
+++ b/src/pages/components/skills/subStackItem.module.css
@@ -20,9 +20,11 @@
 	min-width: 3rem;
 	padding: 0.5rem;
 	border-radius: 0.5rem;
-	background-color: rgba(200,200,200,0.4);
+	background-color: rgba(200,200,200,1);
 	text-align: center;
 	margin : 0.1rem;
+	color : #525252;
+	font-weight: bold;
 
 }
 
