--- a/src/pages/components/projects/project/detailedProject.module.css
+++ b/src/pages/components/projects/project/detailedProject.module.css
@@ -10,13 +10,12 @@
 	opacity: 0;
 }
 
-.content{
-	padding: 1.5rem;
+
+
+.container {
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	height: 100%;
-	flex-grow: 1;	
+	flex-direction: row;
+	justify-content: center;
 }
 
 .container:hover > img:first-child{
@@ -33,29 +32,48 @@
 	transition: ease-in 0.3s;
 }
 
-
 .img{
-	height: 100%;
 	object-fit: cover;
-	flex-grow: 1;
+
 }
 
+.content{
+	padding: 4rem 1.5rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	flex-grow: 3;
+}
 .title{
 	font-weight: bold;
-	flex-grow: 1.5;
+	text-decoration: none;
 }
 
+.title > a{
+	text-decoration: none;
+	color: inherit;
+}
+
+
 .description {
-	max-height: 2rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	flex-grow: 0.5;
+
+	max-height: 9.6rem;
+	overflow: hidden;
+}
+
+.description > p{
 	font-size : 0.8rem;
 	text-overflow: ellipsis;
 	overflow: hidden;
-	flex-grow: 0.5;
 }
+
 .tags {
 	display: flex;
 	justify-content: center;
-	flex-grow: 1;
 }
 .tags > * {
 	margin : 0.2rem;
@@ -66,6 +84,5 @@
 	color : #888;
 	font-weight: bold;
 	font-size: 0.6rem;
-	flex-grow: 1;
 	margin-bottom: 0.2rem;
 }
