--- a/src/components/ui/tooltip.module.css
+++ b/src/components/ui/tooltip.module.css
@@ -3,12 +3,26 @@
 	width: 1.8rem;
 	height: 1.8rem;
 	position: relative;
+	cursor : pointer;
 }
 
 
 .icon {
 	fill:none;
-	stroke:#000;
+	stroke:#555;
 	stroke-miterlimit:10;
 	stroke-width:1.8px;
+}
+
+
+.iconText{
+	fill:#555;
+}
+
+.clicked  .icon {
+	stroke: rgb(77, 164, 199);
+}
+.clicked  .iconText {
+	fill: rgb(77, 164, 199);
+
 }
