--- a/src/components/ui/tag.module.css
+++ b/src/components/ui/tag.module.css
@@ -1,10 +1,12 @@
 .tag{
+	display: inline-block;
+	width:  fit-content;
+	height: fit-content;
 	color: white;
 	font-weight: bold;
 	font-size: 0.8rem;
 	padding: 0.2rem;
 	border-radius: 0.4em;
-	height: wrap-content;
 	white-space: nowrap;
 	text-overflow: ellipsis;
 }
