--- a/src/pages/components/skills/index.module.css
+++ b/src/pages/components/skills/index.module.css
@@ -3,6 +3,7 @@
 	flex-direction: column;
 	align-items: center;
 	position: relative;
+	font-size: 0.75rem;
 }
 
 .container{
@@ -32,8 +33,10 @@
 	padding-left : 1rem;
 	transform: translateX(105%);
 
-	font-size: 0.8rem;
 	color: #aaa;
 	
 }
 
+.title {
+	font-size: 1rem;
+}
