--- a/src/components/ui/dropdown/index.module.css
+++ b/src/components/ui/dropdown/index.module.css
@@ -1,24 +1,26 @@
 .container {
 	position: relative;
 	display: flex;
-	flex-direction: row;
-
-	border : 1px solid #bbb;
+	box-shadow: 0 0 30px 30px rgba(230,230,230,0.2);
 	box-sizing: border-box;
 	padding: 0.25em;
 }
 
-.clicked {
-	background-color: rgba(200, 200, 200, 1);
+.container:hover {
+	background-color: rgba(230, 230, 230, 1);
 }
+
+.clicked {
+	background-color: rgba(230, 230, 230, 1);
+}
+
 
 .fakecontainer {
 	position: absolute;
 	width: 100%;
 	min-height: 100%;
-	transform: translate(-0.25em, -0.25em);
+	transform: translate(-0.25em,-0.25em);
 
-	border : 1px solid #bbb;
 	z-index: 1;
 }
 
@@ -29,11 +31,12 @@
 	width: 100%;
 	min-height: 50%;
 
-	transform: translate(0, 100%) translate(0,0.25rem);
-	background-color: rgba(255, 255, 255, 1.0);
+	transform: translate(0, 100%) translate(0,0.5rem);
+	backdrop-filter: blur(3px);
+	background-color: rgba(120, 120, 120, 0.1);
 
 
-	border : 1px solid #bbb;
+	border : 1px solid rgba(230, 230, 230, 1);
 	box-shadow: 0px 0px 30px rgba(0,0,0, 0.2);
 	z-index: 1;
 
