--- a/src/components/ui/timeline/vertical/index.module.css
+++ b/src/components/ui/timeline/vertical/index.module.css
@@ -8,6 +8,8 @@
 
 .item {
 	position: absolute;
+	display: flex;
+	flex-direction: column;
 	width: 100%;
 }
 
@@ -16,4 +18,13 @@
 	flex-direction: column;
 	align-items: center;
 	transform: translateY(-50%);
+}
+
+.right {
+	align-items: end;
+}
+
+.left {
+	align-items: start;
+	align-items: start;
 }
