--- a/src/notion/detail/detail.module.css
+++ b/src/notion/detail/detail.module.css
@@ -1,6 +1,16 @@
 .container{
 	display: flex;
 	flex-direction: column;
+	-ms-overflow-style: none;  /* IE and Edge */
+	scrollbar-width: none;  /* Firefox */
+}
+
+.container::-webkit-scrollbar {
+  display: none;
+}
+
+.subContainer {
+	margin-bottom: 1.5rem;
 }
 
 .component{
