--- a/src/pages/components/projects/project/detailedProject.module.css
+++ b/src/pages/components/projects/project/detailedProject.module.css
@@ -77,6 +77,8 @@
 }
 
 .tags {
+	height: fit-content;
+	font-size: 0.8em;
 	display: flex;
 	justify-content: center;
 }
@@ -88,6 +90,6 @@
 .term {
 	color : #888;
 	font-weight: bold;
-	font-size: 0.6rem;
+	font-size: 0.8rem;
 	margin-bottom: 0.2rem;
 }
