--- a/src/pages/components/projects/project/index.module.css
+++ b/src/pages/components/projects/project/index.module.css
@@ -26,18 +26,21 @@
 
 .img{
 	height: 50%;
+	width: 100%;
 	object-fit: cover;
 	transform: translateY(-25%);
 	flex-grow: 1;
 }
 
 .title{
+	width: 200px;
 	font-weight: bold;
 	transform: translateY(-50%);
 	flex-grow: 1.5;
 }
 
 .description {
+	width: 220px;
 	max-height: 2rem;
 	font-size : 0.8em;
 	transform: translateY(-30%);
@@ -46,6 +49,8 @@
 	flex-grow: 0.5;
 }
 .tags {
+	height: fit-content;
+	font-size: 0.9em;
 	display: flex;
 	justify-content: center;
 	transform: translateY(-50%);
