fix: src.pages.timline.item project 데이터도 렌더링되도록 하기

--- a/src/components/ui/accordian.module.css
+++ b/src/components/ui/accordian.module.css
@@ -1,4 +1,6 @@
 .container {
+	position: relative;
+	width: 100%;
 	overflow-y: scroll;
 	color : gray;
 	border-radius: 0.5rem;
@@ -14,11 +16,14 @@
 }
 
 .header {
+	position: sticky;
+	background-color: white;
+	top:0;
 	min-height: 1.8rem;
 	font-weight: 700;
 	align-items: center;
 	display: flex;
 	justify-content: space-between;
-  	padding: 0.5rem 0.5rem;
-  	border-bottom: 1px solid #eee;
+	padding: 0.5rem 0.5rem;
+	border-bottom: 1px solid #eee;
 }
