--- a/src/components/ui/timeline/horizontal/index.module.css
+++ b/src/components/ui/timeline/horizontal/index.module.css
@@ -1,3 +1,10 @@
+.container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
 .itemContainer {
 	position: relative;
 }
