--- a/src/pages/main/section/index.module.css
+++ b/src/pages/main/section/index.module.css
@@ -4,8 +4,13 @@
 	align-items: center;
 	justify-content: space-around;
 	margin-top : 1.5rem;
+	border: solid 1px rgba(240, 240, 240, 1);
+	box-shadow: 0 0 30px 30px rgba(230, 230, 230, 0.2);
+	padding: 3.5rem;
+	width: fit-content;
+
 }
 .title{
-	font-size: 1.5rem;
+	font-size: 1.8rem;
 	margin-bottom: 1.5rem;
 }
