--- a/src/pages/programming/perLanguage.module.css
+++ b/src/pages/programming/perLanguage.module.css
@@ -4,3 +4,20 @@
 	flex-wrap: wrap;
 	width: 67%;
 }
+
+.title {
+	display: flex;
+}
+
+.title > div {
+	margin-left: 0.3rem;
+	font-size: 0.9rem;
+}
+
+
+.tooltipContent {
+	display: flex;
+	height: 100%;
+	justify-content: center;
+	align-items: center;
+}
