--- a/src/components/ui/accordian.module.css
+++ b/src/components/ui/accordian.module.css
@@ -3,11 +3,12 @@
 	width: 100%;
 	color : gray;
 	border-radius: 0.5rem ;
-	border:  0.5px solid #eee;
+	border:  1px solid #eee;
 	-ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
   margin: 0.5rem;
 	box-shadow: 0 0 10px 10px rgba(230, 230, 230, 0.1);
+	background-color: white;
 	overflow: hidden;
 }
 
@@ -26,9 +27,10 @@
 	justify-content: space-between;
 	padding: 0.5rem 0.5rem;
 	border-radius: 0.5rem 0.5rem 0 0;
+	background-color: rgba(230,230,230,0.1);
 	cursor: pointer;
 }
 
 .content {
-	border-top: 0.5px solid #eee;
+	border-top: 1px solid #eee;
 }
