--- a/src/components/chart/legend.module.css
+++ b/src/components/chart/legend.module.css
@@ -4,6 +4,8 @@
 .container {
 	display: flex;
 	flex-direction: column;
+	flex-wrap: wrap;
+	width: 100%;
 }
 
 .item {
@@ -11,5 +13,6 @@
 	flex-direction: row;
 	align-items: center;
 	font-weight: bold;
-	margin: 0.4rem 0 ;
+	margin: 0.4em 0 ;
+	justify-content: center;
 }
