--- a/src/notion/valueEntry/index.module.css
+++ b/src/notion/valueEntry/index.module.css
@@ -1,7 +1,14 @@
 .container {
+	display: flex;
+	flex-direction: row;
 	overflow-x: scroll;
 	-ms-overflow-style: none;  /* IE and Edge */
   	scrollbar-width: none;  /* Firefox */
+}
+.wrap {
+	flex-wrap: wrap;
+	align-content: center;
+	row-gap : 0.2rem;
 }
 
 .container:-webkit-scrollbar {
