--- a/src/pages/portfolio/2024/naverboostcamp.module.css
+++ b/src/pages/portfolio/2024/naverboostcamp.module.css
@@ -19,6 +19,39 @@
 	color: #ababab;
 }
 
+.info {
+	display: flex;
+	justify-content: space-between;
+	padding: 2.5rem;
+}
+
+.chanel {
+	width: 50%;
+}
+
+.chanel_list {
+	display: flex;
+	flex-direction: column;
+	list-style: none;
+	padding-left: 1rem;
+}
+
+.chanel_item {
+	display: inline-flex;
+	align-items: center;
+	color: #ababab;
+}
+
+.contact_img {
+	margin-right: 0.5rem;
+	width : 1.5rem;
+	height: 1.5rem;
+}
+
+.practice {
+	align-self: flex-end;
+}
+
 .sections{
 	display: flex;
 }
@@ -99,4 +132,12 @@
 .numberList .number {
 	margin-right: 0.2em;
 	padding: 0em 0.3em;
+}
+
+.noBetween {
+	justify-content: unset;	
+}
+
+.experience {
+	margin-top: 3rem;
 }
