--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,30 @@
-/*@import "tailwindcss"*/
+/*@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');*/
+/*@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');*/
 
-/* index.css 또는 main.css */
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@font-face {
+    font-family: 'NotoSans';
+    src: url('../public/font/NotoSansKR-VariableFont_wght.ttf')
+        format('truetype');
+}
 
-/*@tailwind utilities;*/
-
-
-
-/*@font-face {*/
-/*    font-family: 'NotoSans';*/
-/*    src: url('../public/font/NotoSansKR-VariableFont_wght.ttf')*/
-/*        format('truetype');*/
-/*}*/
-
-/*@font-face {*/
-/*    font-family: 'Roboto';*/
-/*    src: url('../public/font/Roboto-Bold.ttf') format('truetype');*/
-/*    unicode-range: U+0020-007E;*/
-/*    font-weight: 700;*/
-/*}*/
-/*@font-face {*/
-/*    font-family: 'Roboto';*/
-/*    src: url('../public/font/Roboto-Medium.ttf') format('truetype');*/
-/*    unicode-range: U+0020-007E;*/
-/*    font-weight: 500;*/
-/*}*/
-/*@font-face {*/
-/*    font-family: 'Roboto';*/
-/*    src: url('../public/font/Roboto-Regular.ttf') format('truetype');*/
-/*    unicode-range: U+0020-007E;*/
-/*    font-weight: 400;*/
-/*}*/
-
+@font-face {
+    font-family: 'Roboto';
+    src: url('../public/font/Roboto-Bold.ttf') format('truetype');
+    unicode-range: U+0020-007E;
+    font-weight: 700;
+}
+@font-face {
+    font-family: 'Roboto';
+    src: url('../public/font/Roboto-Medium.ttf') format('truetype');
+    unicode-range: U+0020-007E;
+    font-weight: 500;
+}
+@font-face {
+    font-family: 'Roboto';
+    src: url('../public/font/Roboto-Regular.ttf') format('truetype');
+    unicode-range: U+0020-007E;
+    font-weight: 400;
+}
 
 .App {
     min-height: 100vh;
@@ -40,7 +32,7 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    /*font-family: 'NotoSans', sans-serif;*/
+    font-family: 'Roboto', 'NotoSans', sans-serif;
     font-weight: 500;
 }
 
@@ -53,4 +45,3 @@
     padding: 4.5rem 5vw 0;
     flex-grow: 5;
 }
-
