--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    font-family:
+        -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
         sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -9,5 +10,5 @@ body {
 
 code {
     font-family:
-         source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+        source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
