docs: 2025 네이버 부스트캠프 포트폴리오

--- a/src/pages/portfolio/2025/kakao.module.css
+++ b/src/pages/portfolio/2025/kakao.module.css
@@ -1,17 +1,29 @@
 .page {
     padding: 12mm;
+    height: 210mm;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 .titleContainer {
     display: flex;
-    height: 8cm;
     overflow: hidden;
+    flex-grow: 0;
 }
 .title {
-    margin-bottom: 8mm;
+    /*margin-bottom: 8mm;*/
 }
 .titleDescription {
     color: #ababab;
+}
+
+.coteContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-grow : 1;
+}
+.item {
+    height: 120mm;
 }
